<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_blank"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/quickCash"
        android:layout_width="190dp"
        android:layout_height="136dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/quick_cash" />

    <ImageView
        android:id="@+id/Login"
        android:layout_width="282dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@mipmap/ic_banner" />

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="38dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/lock_icon" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="38dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003"
        app:srcCompat="@mipmap/user_icon" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="User Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/toSignUp"
        android:layout_width="110dp"
        android:layout_height="65dp"

        android:freezesText="false"
        android:text="Sign up"

        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:text="Log In"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/forgetPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forget password?"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="gone"
        tools:layout_editor_absoluteX="291dp"
        tools:layout_editor_absoluteY="219dp" />


    <!--    <LinearLayout-->
    <!--        android:id="@+id/linearLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:background="@drawable/sign_up_img"-->
    <!--        android:orientation="horizontal"-->
    <!--        tools:layout_editor_absoluteX="99dp"-->
    <!--        tools:layout_editor_absoluteY="343dp">-->

    <!--    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>