<resources>
    <string name="app_name">Project1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Login">Login</string>
    <string name="logoutBtn">Logout</string>
    <string name="post">Post</string>
    <string name="post_tasks">Post Tasks</string>
    <string name="my_post">My Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_mypost">My Post</string>
    <string name="label_post">Post Your Tasks</string>
    <string name="title_activity_maps">Map</string>
</resources>