<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mypost.MyPostFragment">

    <ListView
        android:id="@+id/tasklistView"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:background="@drawable/search_view_shape"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="58dp" />


</RelativeLayout>